Fix bdoy background repeat

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          }
          body {
              background-image: url(img/background.jpg);
-             background-repeat: no-repeat;
+             background-repeat: repeat-y;
              background-size: cover;
          }
          #gameScreen {
@@ -22,7 +22,7 @@
          }
         </style>
     </head>
-    <body background="img/background.jpg" background-repeat="no-repeat">
+    <body>
         <audio id="ambient" loop>
             <source src="snd/ambient.mp3">
         </audio>
